Changelog
=========

2.6 (xx.xx.xxxx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~

 * Removed support for Python 3.4
 * Added support for `short_description` for field labels in modeladmin's `InspectView` (Wesley van Lee)
 * Rearranged SCSS folder structure to the client folder and split them approximately according to ITCSS. (Naomi Morduch Toubman, Jonny Scholes, Janneke Janssen, Hugo van den Berg)


2.5 (xx.xx.xxxx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~

 * Django 2.2 support (Matt Westcott, Andy Babic)
 * Added support for customising EditHandler-based forms on a per-request basis (Bertrand Bordage)
 * Added more informative error message when `|richtext` filter is applied to a non-string value (mukesh5)
 * Automatic search indexing can now be disabled on a per-model basis via the `search_auto_update` attribute (Karl Hobley)
 * Improved diffing of StreamFields when comparing page revisions (Karl Hobley)
 * Highlight broken links to pages and missing documents in rich text (Brady Moe)
 * Preserve links when copy-pasting rich text content from Wagtail to other tools (Thibaud Colas)
 * Rich text to contentstate conversion now prioritises more specific rules, to accommodate `<p>` and `<br>` elements with attributes (Matt Westcott)
 * Added limit image upload size by number of pixels (Thomas Elliott)
 * Added `manage.py wagtail_update_index` alias to avoid clashes with `update_index` commands from other packages (Matt Westcott)
 * Renamed `target_model` argument on `PageChooserBlock` to `page_type` (Loic Teixeira)
 * `edit_handler` and `panels` can now be defined on a `ModelAdmin` definition (Thomas Kremmel)
 * Add Learn Wagtail to third-party tutorials in documentation (Matt Westcott)
 * Add a Django setting `TAG_LIMIT` to limit number of tags that can be added to any taggit model (Mani)
 * Added instructions on how to generate urls for `ModelAdmin` to documentation (LB (Ben Johnston), Andy Babic)
 * Added option to specify a fallback URL on `{% pageurl %}` (Arthur Holzner)