@@ -21,7 +21,7 @@ Other features
 Bug fixes
 ~~~~~~~~~
 
- * ...
+ * ModelAdmin no longer fails when filtering over a foreign key relation (Jason Dilworth, Matt Westcott)
 
 
 Upgrade considerations
